fixed info not showing bug

--- a/client/src/utils/Map.css
+++ b/client/src/utils/Map.css
@@ -20,10 +20,11 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  background: linear-gradient(45deg, rgba(229, 234, 255, 0.873) 0%, rgba(45, 83, 255, 0.839) 100%);}
-
-.side-bar-empty {
-  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  color:aliceblue;
+  background: linear-gradient(45deg, rgb(36, 26, 182) 0%, rgba(45, 83, 255, 0.51) 100%);}
+  
+  .side-bar-empty {
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   height: 75vh;
@@ -33,5 +34,6 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  color:aliceblue;
   background: linear-gradient(45deg, rgba(192, 203, 254, 0.469) 0%, rgba(69, 103, 255, 0.541) 100%);
 }
